@@ -1,3 +1,10 @@
+2007-10-09  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/Makefile.am: update
+	* src/gen/db/Makefile.am: update
+	* src/gen/lib/primaryobj.py: remove MarkupText dependency
+	* src/Makefile.am: remove RelLib
+	* po/POTFILES.in: update
+
 2007-10-09  Alex Roitman  <shura@gramps-project.org>
 	* configure.in: remove obsolete RelLib/Makefile.in
 
